cambios raiz y register

--- a/public/style.css
+++ b/public/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 .header {
-    background-color: #ffffff; /* Azul grisáceo */
+    background-color: #ffffff; 
     padding: 28px 24px;
 }
 
