--- a/public/style.css
+++ b/public/style.css
@@ -136,7 +136,7 @@ body {
     justify-content: center;
 }
 
-button {
+.agregar-carrito {
     background-color: #84ea6b;
     color: #fff;
     border: none;
@@ -147,61 +147,7 @@ button {
     width: 100%;
 }
 
-button:hover {
+.agregar-carrito:hover {
     background-color: #a2ea90;
 }
 
-.modal {
-    display: none; /* Oculto por defecto */
-    position: fixed;
-    z-index: 1000;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    justify-content: center;
-    align-items: center;
-}
-
-.modal-contenido {
-    background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-    width: 360px;
-    text-align: center;
-    height: 512px;
-    color: black;
-    font-weight: bolder;
-}
-
-.cerrar {
-    float: right;
-    font-size: 24px;
-    cursor: pointer;
-}
-
-#login-form {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    margin-top: 60px;
-}
-
-#login-form input {
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-#login-form button {
-    background-color: #77ff5f;
-    padding: 10px;
-    border-radius: 5px;
-    border: none;
-    cursor: pointer;
-}
-
-#login-form button:hover {
-    background-color: #51ce32;
-}
