--- a/public/style/register.css
+++ b/public/style/register.css
@@ -2,194 +2,152 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-body {
-    background-color: #f3f3f3 ; 
-    color: #e2e8f0;
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
 }
 
-.header {
-    background-color: #ffffff; 
-    padding: 28px 24px;
-}
-
-.navbar {
+.container {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden; 
 }
 
-.logo {
-    flex: 1;
+.main {
+    width: 50%;
+    height: 100%;
+}
+
+.main img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    pointer-events: none
+}
+
+.t1-register {
     text-align: center;
+    margin-bottom: 9px;
 }
 
-.inicio {
-    color: #393939;
-    text-decoration: none;
-    font-size: 28px;
-    font-weight: bold;
-    margin-left: 140px;
-}
-
-.nav-links {
-    list-style: none;
-    display: flex;
-    gap: 20px;
-    padding: 0;
-    margin: 0;
-    
-}
-
-.nav-links li {
-    display: inline;
-}
-
-.nav-links a {
-    text-decoration: none;
-    color: #a1a5ab;
+.login {
+    position: absolute;
+    top: 26px;
+    right: 16px;
     font-size: 18px;
-    font-weight: bold;
-    transition: color 0.3s;
-}
-
-.nav-links a:hover {
-    color: black;
-    border-bottom: solid 1px #282828;
+    font-weight: 500;
+    color: gray
 }
 
 .login a {
-    background-color: #77ff5f;
-    padding: 8px 15px;
-    border-radius: 5px;
-    color: #fff;
+    color: #589e47;
+    text-decoration: none;
+    font-weight: bold;
 }
 
 .login a:hover {
-    background-color: #51ce32;
-    color: white;
-    border-bottom: none;
+    text-decoration: underline;
 }
 
-.flex-container {
+.overlay {
+    width: 50%;
+    height: 100%;
     display: flex;
-    margin-top: 56px;
-    height: 650px;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+    padding: 2rem;
+    background-color: #f9f9f9;
 }
 
-.div-sect {
+.right-section {
+    width: 100%;
+    max-width: 400px;
+}
+
+.left-section {
     display: grid;
-    grid-template-columns: 2fr 2fr; /* Izquierda más pequeña, derecha más grande */
-    gap: 20px; /* Espacio entre columnas */
+    text-align: center;
+    margin-bottom: 1rem;
+    justify-items: start;
 }
 
-.columna-izquierda, .columna-derecha {
+.left-section h1 {
+    font-size: 1.8rem;
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+}
+
+p {
+    margin-bottom: 1rem;
+}
+
+form {
     display: flex;
     flex-direction: column;
-    gap: 10px; /* Espacio entre los elementos */
 }
 
 label {
     font-weight: bold;
-    color: #393939;
+    margin-top: 10px;
 }
 
-input {
-    padding: 8px;
+input, select {
+    width: 100%;
+    margin-bottom: 4px;
+    padding: 10px;
+    margin-top: 5px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    width: 100%;
 }
 
+.small {
+    font-size: 0.9rem;
+    color: gray;
+}
 
-#register-form {
+.checkbox-container {
     display: flex;
-    flex-direction: column;
-    gap: 10px;
-    margin-top: 60px;
-    color: black;
+    align-items: center;
+    margin: 20px 0;
+    justify-content: center;
 }
 
-.register-text {
-    text-align: center;
-    margin-top: 20px; 
-    color: black;
-    font-weight: bold;
+.checkbox-label {
+    margin: 0;
 }
 
-button {
-    background-color: #84ea6b;
-    color: #fff;
-    border: none;
+.checkbox-container input {
+    margin-right: 8px;
+    height: 14px;
+    width: 14px;
+}
+
+.button-register {
     padding: 10px;
+    background-color: #84ea6b;
+    color: white;
+    border: none;
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
-    width: 100%;
 }
 
-button:hover {
+.button-register:hover {
     background-color: #a2ea90;
 }
 
-.modal {
-    display: none; /* Oculto por defecto */
-    position: fixed;
-    z-index: 1000;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    justify-content: center;
-    align-items: center;
+a {
+    color: #007bff;
+    text-decoration: none;
 }
 
-.modal-contenido {
-    background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-    width: 360px;
+a:hover {
+    text-decoration: underline;
+}
+
+.terms {
+    margin-top: 10px;
+    color: gray;
+    font-size: 0.9rem;
     text-align: center;
-    height: 512px;
-    color: black;
-    font-weight: bolder;
-}
-
-.cerrar {
-    float: right;
-    font-size: 24px;
-    cursor: pointer;
-}
-
-#login-form {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    margin-top: 60px;
-}
-
-#login-form input {
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-#login-form button {
-    background-color: #77ff5f;
-    padding: 10px;
-    border-radius: 5px;
-    border: none;
-    cursor: pointer;
-}
-
-#login-form button:hover {
-    background-color: #51ce32;
 }
